[package]
name = "pingora-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-balancer"
path = "src/main.rs"

[[bin]]
name = "path-router"
path = "src/bin/path_router.rs"

[[bin]]
name = "rate-limiter"
path = "src/bin/rate_limiter.rs"

[[bin]]
name = "circuit-breaker"
path = "src/bin/circuit_breaker.rs"

[[bin]]
name = "auth-proxy"
path = "src/bin/auth_proxy.rs"

[[bin]]
name = "cors-proxy"
path = "src/bin/cors_proxy.rs"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

# Try latest stable versions
pingora = "0.6"
pingora-proxy = "0.6"
pingora-load-balancing = "0.6"

# Additional dependencies for examples
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
sha2 = "0.10"
dashmap = "6.0"
